// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PullQuotes test on web Pull Quotes with a Caption 1`] = `
<div>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    “
  </div>
  <div
    dir="auto"
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </div>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(105,105,105,1)",
        }
      }
    >
      Judge Sapnara
    </div>
  </div>
</div>
`;

exports[`PullQuotes test on web Pull Quotes with a Caption and a Twitter 1`] = `
<div>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    “
  </div>
  <div
    dir="auto"
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </div>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(105,105,105,1)",
        }
      }
    >
      Judge Sapnara
    </div>
    <div>
      <svg
        height={10}
        width={12}
      >
        <path
          fill="#006699"
        />
      </svg>
      <a
        dir="auto"
        href="https://twitter.com/@henrywinter"
        onClick={[Function]}
        onKeyDown={[Function]}
        rel=" noopener noreferrer"
        role="link"
        target="_blank"
      >
        @henrywinter
      </a>
    </div>
  </div>
</div>
`;

exports[`PullQuotes test on web Pull Quotes with a twitter link 1`] = `
<div>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    “
  </div>
  <div
    dir="auto"
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </div>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(105,105,105,1)",
        }
      }
    >
      Judge Sapnara
    </div>
    <div>
      <svg
        height={10}
        width={12}
      >
        <path
          fill="#006699"
        />
      </svg>
      <a
        dir="auto"
        href="https://twitter.com/@JudgeSapnara"
        onClick={[Function]}
        onKeyDown={[Function]}
        rel=" noopener noreferrer"
        role="link"
        target="_blank"
      >
        @JudgeSapnara
      </a>
    </div>
  </div>
</div>
`;

exports[`PullQuotes test on web Pull Quotes without a Caption 1`] = `
<div>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    “
  </div>
  <div
    dir="auto"
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </div>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(105,105,105,1)",
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`PullQuotes test on web Pull Quotes without a Caption and different colours 1`] = `
<div>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(133,0,41,1)",
      }
    }
  >
    “
  </div>
  <div
    dir="auto"
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </div>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "color": "rgba(133,0,41,1)",
        }
      }
    >
      Judge Sapnara
    </div>
  </div>
</div>
`;
